--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-ts-mongodb",
+    "name": "ts-node-mongod-rest-jwt-poc",
     "version": "1.0.0",
     "description": "POC of a TypeScript project that has REST APIs written using Express.js and secured by JSON Web Token",
     "scripts": {
@@ -14,10 +14,6 @@
     "author": "Naresh M. Bhati",
     "license": "ISC",
     "dependencies": {
-        "@types/bcryptjs": "^2.4.2",
-        "@types/passport": "^1.0.4",
-        "@types/passport-jwt": "^3.0.3",
-        "@types/passport-local": "^1.0.33",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
@@ -28,11 +24,15 @@
         "passport-local": "^1.0.0"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.8",
         "@types/express": "^4.17.9",
         "@types/mongoose": "^5.10.1",
         "@types/node": "^14.14.8",
+        "@types/passport": "^1.0.4",
+        "@types/passport-jwt": "^3.0.3",
+        "@types/passport-local": "^1.0.33",
         "@typescript-eslint/eslint-plugin": "^4.8.1",
         "@typescript-eslint/parser": "^4.8.1",
         "eslint": "^7.13.0",
