--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
         "mongoose": "^5.10.15",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0"
-    },
-    "devDependencies": {
-        "@types/bcryptjs": "^2.4.2",
+        "passport-local": "^1.0.0",
+        "rimraf": "^3.0.2",
+        "typescript": "^4.0.5",       
+         "@types/bcryptjs": "^2.4.2",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.8",
         "@types/express": "^4.17.9",
@@ -34,11 +34,11 @@
         "@types/passport-jwt": "^3.0.3",
         "@types/passport-local": "^1.0.33",
         "@typescript-eslint/eslint-plugin": "^4.8.1",
-        "@typescript-eslint/parser": "^4.8.1",
+        "@typescript-eslint/parser": "^4.8.1"
+    },
+    "devDependencies": {
         "eslint": "^7.13.0",
         "nodemon": "^2.0.6",
-        "rimraf": "^3.0.2",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.0.5"
+        "ts-node": "^9.0.0"
     }
 }
