--- a/package.json
+++ b/package.json
@@ -7,24 +7,13 @@
         "fixLints": "eslint ./src --fix",
         "getLints": "eslint ./src",
         "build": "rimraf ./build && tsc",
-        "staging": "node build/server.js staging",
-        "prod": "node build/server.js production"
+        "start": "node build/server.js"
     },
     "keywords": [],
     "author": "Naresh M. Bhati",
     "license": "ISC",
     "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "compression": "^1.7.4",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "mongoose": "^5.10.15",
-        "passport": "^0.4.1",
-        "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0",
-        "rimraf": "^3.0.2",
-        "typescript": "^4.0.5",       
-         "@types/bcryptjs": "^2.4.2",
+        "@types/bcryptjs": "^2.4.2",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.8",
         "@types/express": "^4.17.9",
@@ -34,7 +23,18 @@
         "@types/passport-jwt": "^3.0.3",
         "@types/passport-local": "^1.0.33",
         "@typescript-eslint/eslint-plugin": "^4.8.1",
-        "@typescript-eslint/parser": "^4.8.1"
+        "@typescript-eslint/parser": "^4.8.1",
+        "bcryptjs": "^2.4.3",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.10.15",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
+        "rimraf": "^3.0.2",
+        "typescript": "^4.0.5"
     },
     "devDependencies": {
         "eslint": "^7.13.0",
